--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+appsettings.json
+appsettings.[Dd]evelopment.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
