--- a/OldStore.Api/appsettings.Development.json
+++ b/OldStore.Api/appsettings.Development.json
@@ -6,5 +6,6 @@
     }
   },
 
-  "Database": "server=192.168.31.134;database=oldstore;user=fooxboy;password=Fooxboy@server0034"
+  "Database": "server=192.168.31.134;database=oldstore;user=fooxboy;password=Fooxboy@server0034",
+  "HomeCatalogName": "home"
 }
