--- a/OldStore.Backend/OldStore.Backend.csproj
+++ b/OldStore.Backend/OldStore.Backend.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\OldStore.Shared\OldStore.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\General\" />
+  </ItemGroup>
+
 </Project>
