Миграция на postgres, оптимизация

--- a/OldStore.Api/appsettings.json
+++ b/OldStore.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
 
-  "Database": "server=192.168.31.134;database=oldstore;user=fooxboy;password=Fooxboy@server0034",
+  "Database": "Host=localhost;Database=store;Username=postgres;Password=123456;Pooling=true;Maximum Pool Size=1024;Port=5432;",
   "HomeCatalogName": "home"
 }
