Добавлены домены для игры и каталога

--- a/Backend/Games/OldStore.Games.Domain/OldStore.Games.Domain.csproj
+++ b/Backend/Games/OldStore.Games.Domain/OldStore.Games.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\OldStore.Services.Shared\OldStore.Services.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
