--- a/Backend/OldStore.API/OldStore.API.csproj
+++ b/Backend/OldStore.API/OldStore.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\OldStore.Shared\OldStore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
