--- a/Backend/Catalogs/OldStore.Catalogs.API/OldStore.Catalogs.API.csproj
+++ b/Backend/Catalogs/OldStore.Catalogs.API/OldStore.Catalogs.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,11 +8,20 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.53.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.54.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
     <Folder Include="Protos\" />
   </ItemGroup>
+	
+	<ItemGroup>
+		<Protobuf Include="Protos\catalogs.proto" GrpcServices="Server" />
+	</ItemGroup>
 
 </Project>
