--- a/Backend/OldStore.API/OldStore.API.csproj
+++ b/Backend/OldStore.API/OldStore.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,11 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.53.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.54.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\OldStore.Shared\OldStore.Shared.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="..\Catalogs\OldStore.Catalogs.API\Protos\catalogs.proto" GrpcServices="Client" />
+	</ItemGroup>
 
 </Project>
