Добавлена возможность получить каталог по id

--- a/Backend/Catalogs/OldStore.Catalogs.API/OldStore.Catalogs.API.csproj
+++ b/Backend/Catalogs/OldStore.Catalogs.API/OldStore.Catalogs.API.csproj
@@ -19,6 +19,10 @@
     <Folder Include="Controllers\" />
     <Folder Include="Protos\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OldStore.Catalogs.Infrastructure\OldStore.Catalogs.Infrastructure.csproj" />
+  </ItemGroup>
 	
 	<ItemGroup>
 		<Protobuf Include="Protos\catalogs.proto" GrpcServices="Server" />
