Начата работа с микросервисом отвечающего за игры

--- a/Backend/Games/OldStore.Games.API/OldStore.Games.API.csproj
+++ b/Backend/Games/OldStore.Games.API/OldStore.Games.API.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Protos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OldStore.Games.Infrastructure\OldStore.Games.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
