Реализована и проверена работа микросервиса каталогов

--- a/Backend/Games/OldStore.Games.API/OldStore.Games.API.csproj
+++ b/Backend/Games/OldStore.Games.API/OldStore.Games.API.csproj
@@ -12,11 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Protos\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\OldStore.Games.Infrastructure\OldStore.Games.Infrastructure.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="Protos\games.proto" GrpcServices="Server" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
 
 </Project>
