--- a/Backend/Catalogs/OldStore.Catalogs.API/Properties/launchSettings.json
+++ b/Backend/Catalogs/OldStore.Catalogs.API/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "OldStore.Catalogs.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5010",
+      "applicationUrl": "https://localhost:3000;http://localhost:3001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
