--- a/Backend/Games/OldStore.Games.API/Properties/launchSettings.json
+++ b/Backend/Games/OldStore.Games.API/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "OldStore.Games.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5002;http://localhost:5020",
+      "applicationUrl": "https://localhost:6000;http://localhost:6001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
